--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -1,30 +1,6 @@
-.header {
-    height: 64px;
-    position: sticky;
-    top: 0;
-    border: 1px solid var( --color_main);
-    margin: auto;
-    padding: 0 32px;
-    display: flex;
-    background: rgba(var( --color_main), 0.95);
+.footer {
+    background: var( --color_main);
+    padding: 30px 0;
+    text-align: center;
     color: var( --color_accent);
-    font-size: 13px;
-    z-index: 9;
-}
-
-.logoWrapper {
-    margin-right: auto;
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    font-family: "Tomorrow", sans-serif;
-}
-
-.nav {
-    display: flex;
-    align-items: center;
-}
-
-.navItem {
-    padding: 0 16px;
 }
