aboutページ作成

--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -6,7 +6,7 @@
     margin: auto;
     padding: 0 32px;
     display: flex;
-    background: rgba(var( --color_main), 0.95);
+    background: rgba( 0,19,40, 0.95 );
     color: var( --color_accent);
     font-size: 13px;
     z-index: 9;
