--- a/src/components/coreValues/index.module.scss
+++ b/src/components/coreValues/index.module.scss
@@ -20,7 +20,7 @@
 .valuesListImgWrapper {
     width: 80px;
     height: 80px;
-    background: $color_main;
+    background: var( --color_main);
     border-radius: 50%;
     margin: auto;
     position: relative;
