--- a/src/components/fascinated/index.module.scss
+++ b/src/components/fascinated/index.module.scss
@@ -1,16 +1,16 @@
-.valuesList {
+.facinatedList {
     display: flex;
     justify-content: space-between;
     margin: 48px auto 0;
     max-width: 980px;
 }
 
-.valuesListItem {
+.facinatedListItem {
     width: 30%;
     text-align: center;
 }
 
-.valuesListImgWrapper {
+.facinatedListImgWrapper {
     width: 80px;
     height: 80px;
     background: var( --color_main);
@@ -28,34 +28,34 @@
         right: 0;
     }
 
-    .valuesImgWalk {
+    .facinatedImgWalk {
         width: 48%;
     }
 
-    .valuesImgPower {
+    .facinatedImgPower {
         width: 36%;
     }
 
-    .valuesImgColorLens {
+    .facinatedImgColorLens {
         width: 48%;
     }
 
-    .valuesImgAirplane {
+    .facinatedImgAirplane {
         width: 36%;
     }
 
-    .valuesImgEmbed2 {
+    .facinatedImgEmbed2 {
         width: 44%;
     }
 }
 
-.valuesTitle {
+.facinatedTitle {
     font-size: 18px;
     font-weight: bold;
     margin-top: 24px;
 }
 
-.valuesText {
+.facinatedText {
     border-radius: 8px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2);
     margin: 32px 12% 0;
@@ -93,12 +93,12 @@
     }
 }
 
-.valuesTextInner {
+.facinatedTextInner {
     position: relative;
     z-index: 5;
 }
 
-.valuesTextHead {
+.facinatedTextHead {
     font-weight: bold;
     text-align: center;
     margin-bottom: 8px;
