--- a/src/components/snsLink/index.module.scss
+++ b/src/components/snsLink/index.module.scss
@@ -4,6 +4,10 @@
     width: 580px;
     margin: auto;
     margin-top: 48px;
+
+    @media (max-width: 580px) { 
+        width: 100%;
+     }
 }
 
 .snsListItem {
