--- a/src/pages/about/index.module.scss
+++ b/src/pages/about/index.module.scss
@@ -3,6 +3,10 @@
     display: flex;
     max-width: 980px;
     margin: 80px auto;
+    
+    @media (max-width: 580px) { 
+        display: block;
+    }
 }
 .textWrapper {
     margin-left: 32px;
