--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -23,4 +23,8 @@
     color: var( --color_main);
     font-family: "Tomorrow", sans-serif;
     letter-spacing: 4px;
+
+    @media screen and (max-width: 480px) {
+        font-size: 28px;
+    }
 }
